--- a/roulettecounter/templates/roulettecounter/includes/navbar.html
+++ b/roulettecounter/templates/roulettecounter/includes/navbar.html
@@ -12,6 +12,9 @@
                 <a class="nav-link" href="/">{{user.username}}</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/analytics">Analytics</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/history">History</a>
             </li>
             <!-- <li class="nav-item">
@@ -23,6 +26,9 @@
             {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="/">Guest</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/analytics">Analytics</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="/visualize">Visualize</a>
