--- a/roulettecounter/templates/roulettecounter/includes/navbar.html
+++ b/roulettecounter/templates/roulettecounter/includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Roulette Counter</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -16,6 +16,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/history">History</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/mobile">Mobile</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="/visualize">Visualize</a>
@@ -33,6 +36,9 @@
             <!-- <li class="nav-item">
               <a class="nav-link" href="/visualize">Visualize</a>
             </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="/mobile">Mobile</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/signup">Sign Up</a>
             </li>
