--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -1,77 +1,105 @@
 {% extends "roulettecounter/base.html" %}
 
 {% block content %}
-
+<br>
 <div class="row justify-content-center">
-    <div class="col-1 text-center">
-        <div class="row">
-            <div class="col">
-                <h5>&nbsp;</h5>
-                <p class="text-dark">
-                    <small>&nbsp</small>
-                </p>
-            </div>
-        </div>
-        <br>
-        <div class="row justify-content-center">
-            {% include "roulettecounter/includes/cell.html" with number=numbers.0 %}
-        </div>
-    </div>
-    <div class="col-10 text-center">
+    <div class="col text-center">
         <!-- First Row-->
         <div class="row justify-content-center">
+            {% include "roulettecounter/includes/cell.html" %}
             {% for number in numbers %}
                 {% if number.number != 0 and number.number|add:"2"|divisibleby:"3" %}
                     {% include "roulettecounter/includes/cell.html" with number=number %}
                 {% endif %}
             {% endfor %}
+            {% include "roulettecounter/includes/cell.html" with v="2 to 1" %}
+        </div>
+<!--        First row of percentages-->
+        <div class="row justify-content-center">
+            {% include "roulettecounter/includes/percentage.html" with percentage=-1 %}
+            {% for number in numbers %}
+                {% if number.number != 0 and number.number|add:"2"|divisibleby:"3" %}
+                    {% include "roulettecounter/includes/percentage.html" with percentage=number.percentage_appeared %}
+                {% endif %}
+            {% endfor %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_first_row %}
         </div>
         <br>
         <!-- Second Row-->
         <div class="row justify-content-center">
+            {% include "roulettecounter/includes/cell.html" with number=numbers.0 %}
             {% for number in numbers %}
                 {% if number.number != 0 and number.number|add:"1"|divisibleby:"3" %}
                     {% include "roulettecounter/includes/cell.html" with number=number %}
                 {% endif %}
             {% endfor %}
+            {% include "roulettecounter/includes/cell.html" with v="2 to 1" %}
+        </div>
+        <!--        Second row of percentages-->
+        <div class="row justify-content-center">
+            {% include "roulettecounter/includes/percentage.html" with percentage=numbers.0.percentage_appeared %}
+            {% for number in numbers %}
+                {% if number.number != 0 and number.number|add:"1"|divisibleby:"3" %}
+                    {% include "roulettecounter/includes/percentage.html" with percentage=number.percentage_appeared %}
+                {% endif %}
+            {% endfor %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_second_row %}
         </div>
         <br>
         <!-- Third Row-->
         <div class="row justify-content-center">
+            {% include "roulettecounter/includes/cell.html" with v=" " %}
             {% for number in numbers %}
                 {% if number.number != 0 and number.number|divisibleby:"3" %}
                     {% include "roulettecounter/includes/cell.html" with number=number %}
                 {% endif %}
             {% endfor %}
+            {% include "roulettecounter/includes/cell.html" with v="2 to 1" %}
+        </div>
+        <!--        Third row of percentages-->
+        <div class="row justify-content-center">
+            {% include "roulettecounter/includes/percentage.html" with percentage=-1 %}
+            {% for number in numbers %}
+                {% if number.number != 0 and number.number|divisibleby:"3" %}
+                    {% include "roulettecounter/includes/percentage.html" with percentage=number.percentage_appeared %}
+                {% endif %}
+            {% endfor %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_third_row %}
         </div>
         <br>
         <div class="row justify-content-center">
-            {% include "roulettecounter/includes/cell.html" with k="1st 12" v=board_stat.percentage_first_col %}
-            {% include "roulettecounter/includes/cell.html" with k="2nd 12" v=board_stat.percentage_second_col %}
-            {% include "roulettecounter/includes/cell.html" with k="3rd 12" v=board_stat.percentage_third_col %}
+            {% include "roulettecounter/includes/cell.html" with v="1st 12" %}
+            {% include "roulettecounter/includes/cell.html" with v="2nd 12" %}
+            {% include "roulettecounter/includes/cell.html" with v="3rd 12" %}
+        </div>
+        <div class="row justify-content-center">
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_first_col %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_second_col %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_third_col %}
         </div>
         <br>
         <div class="row justify-content-center">
-            {% include "roulettecounter/includes/cell.html" with k="1 to 18" v=board_stat.percentage_first_half %}
-            {% include "roulettecounter/includes/cell.html" with k="Even" v=board_stat.percentage_even %}
-            {% include "roulettecounter/includes/cell.html" with k="Red" v=board_stat.percentage_red %}
-            {% include "roulettecounter/includes/cell.html" with k="Black" v=board_stat.percentage_black %}
-            {% include "roulettecounter/includes/cell.html" with k="Odd" v=board_stat.percentage_odd %}
-            {% include "roulettecounter/includes/cell.html" with k="19 to 36" v=board_stat.percentage_second_half %}
+            {% include "roulettecounter/includes/cell.html" with v="1 to 18" %}
+            {% include "roulettecounter/includes/cell.html" with v="Even" %}
+            {% include "roulettecounter/includes/cell.html" with v="Red" %}
+            {% include "roulettecounter/includes/cell.html" with v="Black" %}
+            {% include "roulettecounter/includes/cell.html" with v="Odd" %}
+            {% include "roulettecounter/includes/cell.html" with v="19 to 36" %}
+        </div>
+        <div class="row justify-content-center">
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_first_half %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_even %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_red %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_black %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_odd %}
+            {% include "roulettecounter/includes/percentage.html" with percentage=board_stat.percentage_second_half %}
         </div>
     </div>
-    <div class="col-1 text-center">
-        <div class="row">
-            {% include "roulettecounter/includes/cell.html" with k="2 to 1" v=board_stat.percentage_first_row %}
-        </div>
-        <br>
-        <div class="row justify-content-center">
-            {% include "roulettecounter/includes/cell.html" with k="2 to 1" v=board_stat.percentage_second_row %}
-        </div>
-        <br>
-        <div class="row justify-content-center">
-            {% include "roulettecounter/includes/cell.html" with k="2 to 1" v=board_stat.percentage_third_row %}
-        </div>
+</div>
+<br>
+<div class="row justify-content-center">
+    <div class="col text-center">
+        <p class="text-secondary"><small>Out of a sample size of {{ board_stat.total_count }}.</small></p>
     </div>
 </div>
 {% endblock %}
