--- a/roulettecounter/templates/roulettecounter/includes/cell.html
+++ b/roulettecounter/templates/roulettecounter/includes/cell.html
@@ -8,21 +8,32 @@
         {% elif number.is_green %}
             <h5 class="text-success">{{ number.number }}</h5>
         {% endif %}
-
-        {% if number.percentage_appeared < 0.1 %}
-            <p class="text-muted"><small>({{ number.percentage_appeared }}%)</small></p>
-        {% else %}
-            <p class="text-dark"><small>({{ number.percentage_appeared }}%)</small></p>
-        {% endif %}
     {% else %}
-        <h5 class="text-secondary">{{ k }}</h5>
-        {% if v < 0.1 %}
-            <p class="text-muted">
-        {% else %}
-            <p class="text-dark">
+        {% if v %}
+            {% if v == "Red" %}
+                <h6 class="text-danger">{{ v }}</h6>
+            {% else %}
+                <h6 class="text-secondary">{{ v }}</h6>
+            {% endif %}
         {% endif %}
-        <small>({{ v }}%)</small>
-        </p>
     {% endif %}
+
+    {% comment %}
+<!--        {% if number.percentage_appeared < 0.1 %}-->
+<!--            <p class="text-muted"><small>({{ number.percentage_appeared }}%)</small></p>-->
+<!--        {% else %}-->
+<!--            <p class="text-dark"><small>({{ number.percentage_appeared }}%)</small></p>-->
+<!--        {% endif %}-->
+<!--    {% else %}-->
+<!--        <h6 class="text-secondary">{{ k }}</h6>-->
+<!--        {% if v < 0.1 %}-->
+<!--            <p class="text-muted">-->
+<!--        {% else %}-->
+<!--            <p class="text-dark">-->
+<!--        {% endif %}-->
+<!--        <small>({{ v }}%)</small>-->
+<!--        </p>-->
+<!--    {% endif %}-->
+    {% endcomment %}
 
 </div>
